subnet.tf
resource "aws_subnet" "public-subnet-demo-project" {
  vpc_id                  = aws_vpc.demp-project-vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1a"

  tags = {
    Name = "public-subnet"
  }
}

resource "aws_subnet" "private-subnet-demo-project" {
  vpc_id            = aws_vpc.demp-project-vpc.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "private-subnet"
  }
}
