vpc.tf
resource "aws_vpc" "demp-project-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "demp-project-vpc"
  }
}
